Fix header width and z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ a {
     background-color: rgba(255, 255, 255, 0.6);
     margin: 0;
     padding:4vh 0;
+    z-index: 1;
 }
 .header:hover {
     background-color: rgb(255, 255, 255);
@@ -212,6 +213,7 @@ a {
 .dropdown_content{
     padding: 0;
     display: none;
+    min-width: 200px;
 }
 .dropdown_item {
     padding: 5px 10px;
